--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,6 @@ anyhow = "1.0.68"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 tracing = "0.1.37"
 async-trait = "0.1.63"
-common = { path = "../common" }
 mockall = "0.11.3"
 sqlx = { version = "0.6.2", features = [
   "runtime-tokio-rustls",
@@ -21,9 +20,6 @@ sqlx = { version = "0.6.2", features = [
   "offline",
 ] }
 lettre = "0.10.3"
-prost = "0.11.6"
 tonic = "0.8.3"
 tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
-
-[build-dependencies]
-tonic-build = "0.8.4"
+madtofan-microservice-common = { git = "https://github.com/madtofan/common", branch = "bugfix/PR-3293" }
