--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dotenv = "0.15.0"
 clap = { version = "4.1.4", features = ["derive", "env"] }
 anyhow = "1.0.68"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
@@ -22,4 +21,4 @@ sqlx = { version = "0.6.2", features = [
 lettre = "0.10.3"
 tonic = "0.8.3"
 tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
-madtofan-microservice-common = { git = "https://github.com/madtofan/common", branch = "bugfix/PR-3293" }
+madtofan-microservice-common = { git = "https://github.com/madtofan/common", branch = "master" }
