--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ lettre = "0.10.3"
 tonic = "0.8.3"
 tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
 madtofan-microservice-common = { git = "https://github.com/madtofan/common", branch = "master" }
+dotenv = "0.15.0"
