--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 DATABASE_URL=postgres://email_database_user:email_database_password@database.ip:5432/email_database
 RUST_LOG=sqlx=debug,tower_http=debug,email=debug,error,info
-SERIVCE_URL=127.0.0.1
+SERVICE_URL="127.0.0.1"
 SERVICE_PORT=4001
-RUN_MIGRATIONS=false
+RUN_MIGRATIONS=true
 SEED=false
 SQL_OFFLINE=true
 SERVICE_EMAIL_ADDRESS=example_email@gmail.com
