--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,13 @@ tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 tracing = "0.1.37"
 async-trait = "0.1.63"
 mockall = "0.11.3"
-sqlx = { version = "0.6.2", features = [
+sqlx = { version = "0.7.1", features = [
   "runtime-tokio-rustls",
   "postgres",
   "time",
-  "offline",
 ] }
 lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls"] }
 tonic = "0.8.3"
-tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
-madtofan-microservice-common = { path="../common" }
+tokio = { version = "1.24.2", features = ["full"] }
+madtofan-microservice-common = { path = "../common" }
 dotenv = "0.15.0"
